Fixed simulated market order with volume in counter currency